force-app/main/default/objects/Product2/fields/Material_Group__c.field-meta.xml
<CustomField>
    <fullName>Material_Group__c</fullName>
    <label>Material Group</label>
    <length>8</length>
    <type>Text</type>
</CustomField>