force-app/main/default/objects/Product2/fields/Material_Origin__c.field-meta.xml
<CustomField>
    <fullName>Material_Origin__c</fullName>
    <label>Material Origin</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>