force-app/main/default/objects/Product2/fields/Material_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Material_Subtype__c</fullName>
    <label>Material Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPP</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>GRL</fullName>
            </value>
            <value>
                <fullName>VD</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>