force-app/main/default/objects/Product2/fields/Material_Usage__c.field-meta.xml
<CustomField>
    <fullName>Material_Usage__c</fullName>
    <label>Material Usage</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>