force-app/main/default/objects/Product2/fields/PMC_CPQ_Basic_Material__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Basic_Material__c</fullName>
    <label>Basic Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMMON</fullName>
            </value>
            <value>
                <fullName>AMMONSASK</fullName>
            </value>
            <value>
                <fullName>ASPIRE</fullName>
            </value>
            <value>
                <fullName>BIOFOS</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DNU</fullName>
            </value>
            <value>
                <fullName>DYNAFOS</fullName>
            </value>
            <value>
                <fullName>DYNAK</fullName>
            </value>
            <value>
                <fullName>DYNAKWHITE</fullName>
            </value>
            <value>
                <fullName>DYNAM</fullName>
            </value>
            <value>
                <fullName>FEED1304</fullName>
            </value>
            <value>
                <fullName>FEEDUREA</fullName>
            </value>
            <value>
                <fullName>FEEDUREASK</fullName>
            </value>
            <value>
                <fullName>FSACID</fullName>
            </value>
            <value>
                <fullName>GMAP</fullName>
            </value>
            <value>
                <fullName>GMAP1050</fullName>
            </value>
            <value>
                <fullName>GMAP1150</fullName>
            </value>
            <value>
                <fullName>GTSP</fullName>
            </value>
            <value>
                <fullName>IMPFEEDP</fullName>
            </value>
            <value>
                <fullName>K BLENDS</fullName>
            </value>
            <value>
                <fullName>KMAG</fullName>
            </value>
            <value>
                <fullName>KMAG BLENDS</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>LIME</fullName>
            </value>
            <value>
                <fullName>LIQUID BORO SUPER</fullName>
            </value>
            <value>
                <fullName>LIQUID CALCIUM</fullName>
            </value>
            <value>
                <fullName>LIQUID SEA WEED</fullName>
            </value>
            <value>
                <fullName>LIQUID ZINC</fullName>
            </value>
            <value>
                <fullName>MES</fullName>
            </value>
            <value>
                <fullName>MES BLENDS S15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>