force-app/main/default/objects/Product2/fields/PMC_CPQ_Basic_Text__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Basic_Text__c</fullName>
    <label>Basic Text - PT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>