force-app/main/default/objects/Product2/fields/PMC_CPQ_Boron__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Boron__c</fullName>
    <description>This field captures Boron % for the product.</description>
    <inlineHelpText>This field captures Boron % for the product.</inlineHelpText>
    <label>Boron [B] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>