force-app/main/default/objects/Product2/fields/PMC_CPQ_Business_Application__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Business_Application__c</fullName>
    <label>BA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>government</fullName>
            </value>
            <value>
                <fullName>water treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>