force-app/main/default/objects/Product2/fields/PMC_CPQ_Calcium__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Calcium__c</fullName>
    <description>This field captures Calcium % for each product record</description>
    <inlineHelpText>This field captures Calcium % for each product record</inlineHelpText>
    <label>Calcium [Ca] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>