force-app/main/default/objects/Product2/fields/PMC_CPQ_Chlorine__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Chlorine__c</fullName>
    <description>This field captures Chlorine % for the product.</description>
    <inlineHelpText>This field captures Chlorine % for the product</inlineHelpText>
    <label>Chlorine [Cl] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>