force-app/main/default/objects/Product2/fields/PMC_CPQ_Cobalt__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Cobalt__c</fullName>
    <description>This field is created as a part of story to handle/store percent value of Cobalt for any Product.</description>
    <label>Cobalt [CO] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>