force-app/main/default/objects/Product2/fields/PMC_CPQ_Composition__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Composition__c</fullName>
    <description>This field captures Product concentration/compensation for each product record</description>
    <inlineHelpText>This field captures Product concentration/compensation for each product record</inlineHelpText>
    <label>Product Concentration / Composition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>