force-app/main/default/objects/Product2/fields/PMC_CPQ_Control_Code__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Control_Code__c</fullName>
    <label>Control Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>