force-app/main/default/objects/Product2/fields/PMC_CPQ_ControlVisibility__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ControlVisibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMC_CPQ_ControlVisibility</label>
    <type>Checkbox</type>
</CustomField>