force-app/main/default/objects/Product2/fields/PMC_CPQ_CropType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CropType__c</fullName>
    <description>This field captures the crop type for each product record.</description>
    <inlineHelpText>This field captures the crop type for each product record</inlineHelpText>
    <label>Crop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corn</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
            <value>
                <fullName>Barley</fullName>
            </value>
            <value>
                <fullName>Soy</fullName>
            </value>
            <value>
                <fullName>Corn Safrinha</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Cane</fullName>
            </value>
            <value>
                <fullName>Pineapple</fullName>
            </value>
            <value>
                <fullName>Pumpkin</fullName>
            </value>
            <value>
                <fullName>Alfalfa</fullName>
            </value>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>Cotton-Irrigant</fullName>
            </value>
            <value>
                <fullName>Garlic</fullName>
            </value>
            <value>
                <fullName>Peanut</fullName>
            </value>
            <value>
                <fullName>Mulberry</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Rice-Irrigant</fullName>
            </value>
            <value>
                <fullName>Banana</fullName>
            </value>
            <value>
                <fullName>Potato</fullName>
            </value>
            <value>
                <fullName>Potato-Irrigant</fullName>
            </value>
            <value>
                <fullName>Sweet Potato</fullName>
            </value>
            <value>
                <fullName>Cocoa</fullName>
            </value>
            <value>
                <fullName>Coffee-Irrigant</fullName>
            </value>
            <value>
                <fullName>Sugarcane-Plant</fullName>
            </value>
            <value>
                <fullName>Soca Cane</fullName>
            </value>
            <value>
                <fullName>Persimmon</fullName>
            </value>
            <value>
                <fullName>Onion</fullName>
            </value>
            <value>
                <fullName>Carrot</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Citrus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>