force-app/main/default/objects/Product2/fields/PMC_CPQ_Cross_distribution__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Cross_distribution__c</fullName>
    <label>Cross-distribution-chain material status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>