force-app/main/default/objects/Product2/fields/PMC_CPQ_Date_from__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Date_from__c</fullName>
    <label>Date from which the X-distr.-chain mater</label>
    <type>Date</type>
</CustomField>