force-app/main/default/objects/Product2/fields/PMC_CPQ_External_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_External_Material_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Material Group</label>
    <referenceTo>External_Material_Group__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>