force-app/main/default/objects/Product2/fields/PMC_CPQ_GranularType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_GranularType__c</fullName>
    <description>This field captures the Granular Type value for each product record</description>
    <inlineHelpText>This field captures the Granular Type value for each product record</inlineHelpText>
    <label>Granular Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Granular</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Powder</fullName>
            </value>
            <value>
                <fullName>Pellets</fullName>
            </value>
            <value>
                <fullName>Coarse</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Wet Rock</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>Microgranulated</fullName>
            </value>
            <value>
                <fullName>Farelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>