force-app/main/default/objects/Product2/fields/PMC_CPQ_Group_Name_to_O9__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Group_Name_to_O9__c</fullName>
    <label>Group Name to O9</label>
    <length>255</length>
    <type>Text</type>
</CustomField>