force-app/main/default/objects/Product2/fields/PMC_CPQ_InactiveReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InactiveReason__c</fullName>
    <label>Inactive Reason</label>
    <type>TextArea</type>
</CustomField>