force-app/main/default/objects/Product2/fields/PMC_CPQ_Industry__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Industry__c</fullName>
    <description>This field captures Industry value for each product record</description>
    <inlineHelpText>This field captures Industry value for each product record</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>