force-app/main/default/objects/Product2/fields/PMC_CPQ_Iron__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Iron__c</fullName>
    <description>This field captures Iron  % for each product record.</description>
    <inlineHelpText>This field captures Iron  % for each product record</inlineHelpText>
    <label>Iron [FE] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>