force-app/main/default/objects/Product2/fields/PMC_CPQ_IsArchived__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created as a part of story to check whether this Product would be archived or not.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>