force-app/main/default/objects/Product2/fields/PMC_CPQ_Libre_Venta__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Libre_Venta__c</fullName>
    <label>Libre Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>