force-app/main/default/objects/Product2/fields/PMC_CPQ_Location__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>