force-app/main/default/objects/Product2/fields/PMC_CPQ_LocationName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LocationName__c</fullName>
    <formula>PMC_CPQ_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>