force-app/main/default/objects/Product2/fields/PMC_CPQ_Mat_Grp_Packaging_Materials__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Mat_Grp_Packaging_Materials__c</fullName>
    <label>Material Group Packaging Materials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VERP</fullName>
                <label>VERP - Handling Units</label>
            </value>
            <value>
                <fullName>ZFED</fullName>
                <label>ZFED - Feed</label>
            </value>
            <value>
                <fullName>ZNMT</fullName>
                <label>ZNMT - Nitrogen</label>
            </value>
            <value>
                <fullName>ZNUG</fullName>
                <label>ZNUG - Urea Nitrogen N&gt;26</label>
            </value>
            <value>
                <fullName>ZPGS</fullName>
                <label>ZPGS - Phosphate N&gt; 6</label>
            </value>
            <value>
                <fullName>ZPLS</fullName>
                <label>ZPLS - Phosphate &lt;6</label>
            </value>
            <value>
                <fullName>ZRCX</fullName>
                <label>ZRCX - RCX Equipment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>