force-app/main/default/objects/Product2/fields/PMC_CPQ_Material_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Material_Type__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZFRT</fullName>
                <label>ZFRT - Straigth</label>
            </value>
            <value>
                <fullName>ZKMT</fullName>
                <label>ZKMT - Blend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>