force-app/main/default/objects/Product2/fields/PMC_CPQ_MaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MaterialGroup__c</fullName>
    <description>This field is created as a part of story to handle/store value of any Product&apos;s Group.</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BIOSCIENCE</fullName>
            </value>
            <value>
                <fullName>Co-Product</fullName>
            </value>
            <value>
                <fullName>Nitrogen</fullName>
                <label>NITROGEN</label>
            </value>
            <value>
                <fullName>NPK</fullName>
            </value>
            <value>
                <fullName>Phosphate</fullName>
            </value>
            <value>
                <fullName>Potash</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
                <label>SERVICES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>