force-app/main/default/objects/Product2/fields/PMC_CPQ_Molybdenum__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Molybdenum__c</fullName>
    <description>This field captures Molybdenum % for each product record</description>
    <inlineHelpText>This field captures Molybdenum % for each product record</inlineHelpText>
    <label>Molybdenum [MO] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>