force-app/main/default/objects/Product2/fields/PMC_CPQ_NetbackMaterial__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NetbackMaterial__c</fullName>
    <description>This field is created as a part of story to handle/store value of Netback Material for any Product.</description>
    <label>Netback Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>