force-app/main/default/objects/Product2/fields/PMC_CPQ_PackageType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PackageType__c</fullName>
    <description>This field captures the package type for each product record</description>
    <inlineHelpText>This field captures the package type for each product record</inlineHelpText>
    <label>Packaging Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_PackagingType</valueSetName>
    </valueSet>
</CustomField>