force-app/main/default/objects/Product2/fields/PMC_CPQ_PackType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PackType__c</fullName>
    <description>This field is to display the pack type of the product</description>
    <label>Pack Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Packed</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>