force-app/main/default/objects/Product2/fields/PMC_CPQ_Period_of_Validity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Period_of_Validity__c</fullName>
    <label>Period of Validity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIGBAG</fullName>
            </value>
            <value>
                <fullName>ELEMDAP</fullName>
            </value>
            <value>
                <fullName>ELEMENT</fullName>
            </value>
            <value>
                <fullName>ELEMSAM</fullName>
            </value>
            <value>
                <fullName>ELENITR</fullName>
            </value>
            <value>
                <fullName>ELEUREIA</fullName>
            </value>
            <value>
                <fullName>FARELAD</fullName>
            </value>
            <value>
                <fullName>FARNITR</fullName>
            </value>
            <value>
                <fullName>FARSAM</fullName>
            </value>
            <value>
                <fullName>FARUREIA</fullName>
            </value>
            <value>
                <fullName>FEED</fullName>
            </value>
            <value>
                <fullName>FEED BIOFOS</fullName>
            </value>
            <value>
                <fullName>FEED DYNAFOS</fullName>
            </value>
            <value>
                <fullName>NPKFOS</fullName>
            </value>
            <value>
                <fullName>NPKNITR</fullName>
            </value>
            <value>
                <fullName>NPKUREI</fullName>
            </value>
            <value>
                <fullName>SACO</fullName>
            </value>
            <value>
                <fullName>BIOSCIENCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>