force-app/main/default/objects/Product2/fields/PMC_CPQ_Phosphorous__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Phosphorous__c</fullName>
    <description>This field captures the Phosphorous % for the product.</description>
    <inlineHelpText>This field captures the Phosphorous % for the product.</inlineHelpText>
    <label>Phosphorous %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>