force-app/main/default/objects/Product2/fields/PMC_CPQ_Phosphorous_PH2O__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Phosphorous_PH2O__c</fullName>
    <label>Phosphorous [PH2O] %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>