force-app/main/default/objects/Product2/fields/PMC_CPQ_Planning_Group__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Planning_Group__c</fullName>
    <label>Planning Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AS</fullName>
                <label>AS - Aspire</label>
            </value>
            <value>
                <fullName>FF</fullName>
                <label>FF - Fosfatado</label>
            </value>
            <value>
                <fullName>KC</fullName>
                <label>KC - Potássico</label>
            </value>
            <value>
                <fullName>KM</fullName>
                <label>KM - Kmag</label>
            </value>
            <value>
                <fullName>S1</fullName>
                <label>S1 - Microessentials S15</label>
            </value>
            <value>
                <fullName>S9</fullName>
                <label>S9 - Microessentials S9</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>SA - Sulfato de Amônia</label>
            </value>
            <value>
                <fullName>UR</fullName>
                <label>UR - Ureia</label>
            </value>
            <value>
                <fullName>VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>