force-app/main/default/objects/Product2/fields/PMC_CPQ_Produced_In_House__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Produced_In_House__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Produced In-House</label>
    <type>Checkbox</type>
</CustomField>