force-app/main/default/objects/Product2/fields/PMC_CPQ_Product_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product_Code_Name__c</fullName>
    <formula>PMC_CPQ_SAPProductCode__c + &quot; - &quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code Name</label>
    <type>Text</type>
</CustomField>