force-app/main/default/objects/Product2/fields/PMC_CPQ_Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product_Hierarchy__c</fullName>
    <label>Product Hierarchy</label>
    <length>16</length>
    <type>Text</type>
</CustomField>