force-app/main/default/objects/Product2/fields/PMC_CPQ_Product_Resource_to_O9__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product_Resource_to_O9__c</fullName>
    <label>Product Resource to O9</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASICA PRO</fullName>
            </value>
            <value>
                <fullName>K BLENDS</fullName>
            </value>
            <value>
                <fullName>N BLENDS</fullName>
            </value>
            <value>
                <fullName>NITROGEN</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>P BLENDS</fullName>
            </value>
            <value>
                <fullName>PHOSPHATE</fullName>
            </value>
            <value>
                <fullName>POTASH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>