force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductAlias__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductAlias__c</fullName>
    <description>This field is created as a part of story to handle/store value of Product Alias for any Product.</description>
    <label>Product Alias</label>
    <type>TextArea</type>
</CustomField>