force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductCategory__c</fullName>
    <description>This is used to capture the type of Product. eg. Regular, Regular (Raw Material), Blended</description>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>