force-app/main/default/objects/Product2/fields/PMC_CPQ_ProductClassification__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductClassification__c</fullName>
    <description>This field captures the product classification</description>
    <inlineHelpText>This field captures the product classification</inlineHelpText>
    <label>Product Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>